--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     dataType: 'json',
                     success: function (data) {
                         console.log(data)
-                        getInfo(JSON.parse(data))
+                        getInfo(data)
                     },
                     error: function (error, status, err) {
                         console.log(error)
