--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         #option {
             display: grid;
-            grid-template-columns: 2fr 3fr 3fr;
+            grid-template-columns: 1fr 1fr 1fr;
             column-gap: 50px;
             margin-bottom: 12px;
             align-items: center;
@@ -123,11 +123,9 @@
                     <tr class="text-center">
                         <th colspan="3" id="currentDate">
                             <div id="option">
-                                <div class="form-select-sm">
-                                    <label class="form-check-label id text-start" for="nifty" id="label">
-                                        Record :
-                                    </label>
-                                    <select id="record">
+                                <div>
+                                    
+                                    <select id="record" class="form-select">
                                         <option value="4">4</option>
                                         <option value="8">8</option>
                                         <option value="10">10</option>
