--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
             white-space: nowrap;
         }
 
-        .table td {
-            padding: 4px;
+         table td {
+            padding: 5px 2px;
+            width: 1%;
+            
         }
 
         table td,
@@ -87,39 +89,24 @@
 
     <div class="conntainer">
         <div class="row">
-            <div class="col-sm-12 col-md-12">
-                <table class="table table-bordered">
-                    <tr>
-                        <th colspan="3">Nifty Market</th>
-                        <th colspan="3">Bank Nifty Market</th>
+            <div class="col-md-12">
+                <table class="table-bordered">
+                    <tr class="text-center bg-warning">
+                        <td colspan="3">Nifty 50</td>
                     </tr>
                     <tr>
-                        <th>last</th>
-                        <th>Change</th>
-                        <th>Change in %</th>
-                        <th>last</th>
-                        <th>Change</th>
-                        <th>Change in %</th>
+                        <th>last : 5000</th>
+                        <th>Change:<span>500</span></th>
+                        <th>Change % :1800</th>
                     </tr>
-
+                    <tr class="text-center bg-warning">
+                        <td colspan="3">Bank Nifty</td>
+                    </tr>
                     <tr>
-                        <td>2050</td>
-                        <td>120</td>
-                        <td>426</td>
-                        <td>2050</td>
-                        <td>120</td>
-                        <td>426</td>
+                        <th>last : 5000</th>
+                        <th>Change:<span>500</span></th>
+                        <th>Change % :1800</th>
                     </tr>
-                </table>
-            </div>
-        </div>
-
-    </div>
-
-    <div class="conntainer">
-        <div class="row">
-            <div class="col-sm-12">
-                <table class="table table-bordered">
                     <tr class="text-center">
                         <th colspan="3" id="currentDate">
                             <div id="option">
