--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         table,
         th {
             border: 0.5pt solid windowtext;
-            padding: 1px;
+            padding: 8px;
         }
 
         table {
@@ -89,7 +89,7 @@
 
     <div class="conntainer">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-12">
                 <table class="table-bordered">
                     <tr class="text-center bg-warning">
                         <td colspan="3">Nifty 50</td>
